exercise-1/run/exercise-1-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-1-backend
  labels:
    app: exercise-1-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exercise-1-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: exercise-1-backend
    spec:
      containers:
        - name: exercise-1-backend
          image: docker.io/alayahamza/kata-bnp:0.0.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
