exercise-1/run/exercice-1-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: exercise-1-backend
  name: exercise-1-backend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: exercise-1-backend
