exercise-1/run/exercice-1-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: exercise-1-frontend
  name: exercise-1-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: exercise-1-frontend
